<resources>
    <string name="app_name">PopularMovies</string>
    <string name="grid_poster_cd">movie poster</string>
    <string name="detail_error_message">Ops! You are not online.\nPlease, check your connectivity.\nYou can access only some info.</string>
    <string name="error_image_content_description">no video or connection</string>
    <string name="movie_image_content_description">movie poster</string>
    <string name="fake_title_tv">The legend of Udacity</string>
    <string name="vote_average_label_tv">Rating</string>
    <string name="fake_vote_avarage_tv">9.7</string>
    <string name="release_date_label_tv">Year</string>
    <string name="fake_release_date_tv">2018/03/05</string>
    <string name="overview_label_tv">Plot synopsis</string>
    <string name="fake_overview_tv">
        Determined to prove himself, Developer Antedesk, the last italian guy on AND, jumps at
        the chance to crack his new app partnering with his wisey mentor to create
        a majesty app.
    </string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="preview"> (tap to continue)</string>
    <string name="youtube_icon_play">youtube icon play</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="add_favorite_error">Error: movie not added to favorites</string>

    <string name="action_settings">Settings</string>
    <string name="credit_empty_star">&lt;div&gt;Icons made by &lt;a href=&quot;https://www.flaticon.com/authors/smashicons&quot; title=&quot;Smashicons&quot;&gt;Smashicons&lt;/a&gt; from &lt;a href=&quot;https://www.flaticon.com/&quot; title=&quot;Flaticon&quot;&gt;www.flaticon.com&lt;/a&gt; is licensed by &lt;a href=&quot;http://creativecommons.org/licenses/by/3.0/&quot; title=&quot;Creative Commons BY 3.0&quot; target=&quot;_blank&quot;&gt;CC 3.0 BY&lt;/a&gt;&lt;/div&gt;</string>
    <string name="credit_star">&lt;div&gt;Icons made by &lt;a href=&quot;https://www.flaticon.com/authors/smashicons&quot; title=&quot;Smashicons&quot;&gt;Smashicons&lt;/a&gt; from &lt;a href=&quot;https://www.flaticon.com/&quot; title=&quot;Flaticon&quot;&gt;www.flaticon.com&lt;/a&gt; is licensed by &lt;a href=&quot;http://creativecommons.org/licenses/by/3.0/&quot; title=&quot;Creative Commons BY 3.0&quot; target=&quot;_blank&quot;&gt;CC 3.0 BY&lt;/a&gt;&lt;/div&gt;</string>
    <string name="credit_ic_launcher">&lt;div&gt;Icons made by &lt;a href=&quot;https://www.flaticon.com/authors/good-ware&quot; title=&quot;Good Ware&quot;&gt;Good Ware&lt;/a&gt; from &lt;a href=&quot;https://www.flaticon.com/&quot; title=&quot;Flaticon&quot;&gt;www.flaticon.com&lt;/a&gt; is licensed by &lt;a href=&quot;http://creativecommons.org/licenses/by/3.0/&quot; title=&quot;Creative Commons BY 3.0&quot; target=&quot;_blank&quot;&gt;CC 3.0 BY&lt;/a&gt;&lt;/div&gt;</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="my_favorite_movies">My Favorite Movies</string>
    <string name="no_review_available">There are no reviews available for this movie</string>
    <string name="no_trailer_available">There are no trailers/videos available for this movie</string>
</resources>
